# et.al-backend

./: .env.example  README.md  main.py  pyproject.toml
backend/api/: __init__.py  auth.py  helpers.py
backend/db/: session.py  user.py
docs/: code-structure.md  running-the-app.md  setting-up-env.md
etal/: config.py
etal/api/: __init__.py  auth.py  helpers.py  input_models.py
etal/db/: __init__.py  session.py  user.py
